--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -13,24 +13,27 @@
     height: 50px;
   }
 
-  main {
+  mat-sidenav-content {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    background-color: var(--color-background);
+  }
+
+  // afeta todos os itens dentro da outlet
+  ::ng-deep router-outlet ~ * {
+    // display: flex;
+    // justify-content: column;
+    // flex: 1;
+
     margin-top: $header-size;
-    flex: 1;
-    position: relative;
-    background-color: $color-background;
-    overflow: auto;
+    width: 100%;
+    height: 100%;
+    max-width: $global-max-width;
+    padding: rem(20 40);
 
-    // &::ng-deep router-outlet.main ~ * {
-    //   position: absolute;
-    //   width: 100%;
-    //   max-width: $global-max-width;
-    //   padding: rem(20 40);
-
-    //   @include medias($tiny-mobile, $mobile, $small-tablet, $tablet) {
-    //     padding: rem(10);
-    //   }
-    // }
+    @include medias($tiny-mobile, $mobile, $small-tablet, $tablet) {
+      padding: rem(10);
+    }
   }
 }
