--- a/front-end/src/app/pages/about/about.component.scss
+++ b/front-end/src/app/pages/about/about.component.scss
@@ -3,6 +3,24 @@
 @import "../../../sass/functions";
 @import "../../../sass/media";
 
+:host {
+  display: flex;
+  justify-content: center;
+  // margin-top: $header-size;
+  flex: 1;
+  // position: relative;
+  // background-color: $color-background;
+
+  width: 100%;
+  // height: 100%;
+  max-width: $global-max-width;
+  padding: rem(20 40);
+
+  @include medias($tiny-mobile, $mobile, $small-tablet, $tablet) {
+    padding: rem(10);
+  }
+}
+
 .about {
   @include medias($tiny-mobile, $mobile, $small-tablet, $tablet) {
     padding-left: rem(20);
