--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -194,14 +194,18 @@ mat-paginator {
   background-color: $color-tab-panel-border-bottom !important;
 }
 
-.mat-form-field-ripple {
-  background-color: $color-form-field-placeholder-active !important;
-}
+// .mat-form-field-ripple {
+//   background-color: $color-form-field-placeholder-active !important;
+// }
 
-.mat-form-field-label {
-  color: $color-form-field-placeholder !important;
-}
+// .mat-form-field-label {
+//   color: $color-form-field-placeholder !important;
+// }
 
-.mat-focused .mat-form-field-label {
-  color: $color-form-field-placeholder-active !important;
-}
+// .mat-focused .mat-form-field-label {
+//   color: $color-form-field-placeholder-active !important;
+// }
+
+// .mat-focused .mat-form-field-label {
+//   color: $color-form-field-placeholder-active !important;
+// }
