--- a/front-end/src/app/modules/authentication/pages/register-done/register-done.component.html
+++ b/front-end/src/app/modules/authentication/pages/register-done/register-done.component.html
@@ -1,10 +1,12 @@
-<img
-  class="success-image"
-  src="../../../../../assets/img/register-done.svg"
-  alt=""
-/>
-<div class="info">
-  <h1 class="info__title">Parabéns</h1>
-  <span class="info__message">Cadastro realizado com sucesso!</span>
-  <button class="info__button">Ir para página de quadrinhos</button>
+<div class="info-container">
+  <img
+    class="success-image"
+    src="../../../../../assets/img/register-done.svg"
+    alt=""
+  />
+  <div class="info">
+    <h1 class="info__title">Parabéns</h1>
+    <span class="info__message">Cadastro realizado com sucesso!</span>
+    <button class="info__button">Ir para página de quadrinhos</button>
+  </div>
 </div>
