--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -16,6 +16,7 @@
   mat-sidenav-content {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 100vh;
     background-color: var(--color-background);
   }
