--- a/front-end/src/app/modules/admin/pages/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/modules/admin/pages/comic-crud/comic-crud.component.html
@@ -162,21 +162,22 @@
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let element; let i = index">
         <button
-          class="btn btn-edit"
-          mat-button
-          color="primary"
-          (click)="openDialog(element)"
+          mat-icon-button
+          [matMenuTriggerFor]="menu"
+          aria-label="Example icon-button with a menu"
         >
-          Editar
+          <mat-icon>more_vert</mat-icon>
         </button>
-        <button
-          class="btn"
-          mat-button
-          color="warn"
-          (click)="deleteItem(element)"
-        >
-          Deletar
-        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="openDialog(element)">
+            <mat-icon color="primary">edit</mat-icon>
+            <span>Editar</span>
+          </button>
+          <button mat-menu-item (click)="deleteItem(element)">
+            <mat-icon color="warn">delete</mat-icon>
+            <span>Deletar</span>
+          </button>
+        </mat-menu>
       </td>
     </ng-container>
 
