--- a/front-end/src/app/modules/authentication/pages/register/register.component.scss
+++ b/front-end/src/app/modules/authentication/pages/register/register.component.scss
@@ -32,6 +32,10 @@ mat-card-actions {
 
 button {
   width: rem(200);
+
+  @include medias($tiny-mobile, $mobile) {
+    width: rem(130);
+  }
 }
 
 a {
