--- a/front-end/src/app/pages/order/order.component.scss
+++ b/front-end/src/app/pages/order/order.component.scss
@@ -57,6 +57,10 @@
       mat-form-field {
         margin-right: rem(15);
       }
+
+      mat-icon {
+        cursor: pointer;
+      }
     }
 
     &__input {
