✨ feat: submit form on enter keyword.

--- a/front-end/src/app/modules/authentication/pages/login/login.component.html
+++ b/front-end/src/app/modules/authentication/pages/login/login.component.html
@@ -23,6 +23,7 @@
           matInput
           placeholder="Senha"
           formControlName="password"
+          (keyup.enter)="login(form.value)"
         />
       </mat-form-field>
     </form>
