--- a/front-end/src/app/pages/comic-detail/comic-detail.component.html
+++ b/front-end/src/app/pages/comic-detail/comic-detail.component.html
@@ -49,14 +49,6 @@
                 }}</span>
               </li>
             </ul>
-            <ul class="comic-details__info">
-              <li class="comic-details__item">
-                <strong class="comic-details__item__label">Editora:</strong>
-                <span class="comic-details__item__value"
-                  >Penguin Books Ltd</span
-                >
-              </li>
-            </ul>
           </section>
         </mat-tab>
       </mat-tab-group>
@@ -64,7 +56,7 @@
 
     <form [formGroup]="comicForm" class="comic__form">
       <span class="comic__price">R$ {{ comic?.price | number: "2.2" }}</span>
-      <span class="comic__inventory">
+      <span *ngIf="comic?.inventoryQuantity" class="comic__inventory">
         Disponibilidade:
         <span
           class="comic__inventory{{
@@ -73,7 +65,7 @@
         >
           {{
             isInventoryAvailable
-              ? comic.inventoryQuantity + " unidade(s)"
+              ? comic?.inventoryQuantity + " unidade(s)"
               : "não disponível"
           }}
           em estoque</span
@@ -92,7 +84,9 @@
       </mat-form-field>
       <div class="comic__btn-container">
         <button
-          (click)="addMultipleItemsToCart(comic)"
+          (click)="
+            addMultipleItemsToCart(comic, +comicForm.controls.quantity.value)
+          "
           [disabled]="comicForm.invalid || comic?.inventoryQuantity === 0"
           class="comic__btn"
         >
