--- a/front-end/src/app/pages/home/home.component.scss
+++ b/front-end/src/app/pages/home/home.component.scss
@@ -3,6 +3,12 @@
 @import "../../../sass/functions";
 @import "../../../sass/media";
 
+:host {
+  @include medias($tiny-mobile, $mobile) {
+    @include flex-center(column);
+  }
+}
+
 .panel {
   @include flex-center;
   justify-content: space-around;
@@ -17,8 +23,9 @@
   background-color: $color-panel-bg;
   border-radius: 10px;
 
-  @include mobile {
+  @include medias($tiny-mobile, $mobile) {
     flex-direction: column;
+    margin: 0;
   }
 
   &__title {
@@ -39,6 +46,11 @@
     font-size: rem(25);
     width: rem(500);
     line-height: rem(25);
+
+    @include medias($tiny-mobile, $mobile) {
+      width: 350px;
+      font-size: 19px;
+    }
   }
 
   &__button {
@@ -50,5 +62,10 @@
 
   img {
     @include size(300);
+
+    @include medias($tiny-mobile, $mobile) {
+      margin-top: rem(20);
+      @include size(200);
+    }
   }
 }
