--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -129,6 +129,12 @@ table {
   td.mat-footer-cell {
     color: $color-text;
   }
+
+  th.mat-header-cell:last-of-type,
+  td.mat-cell:last-of-type,
+  td.mat-footer-cell:last-of-type {
+    text-align: end;
+  }
 }
 
 .title-group {
