--- a/front-end/src/app/modules/admin/pages/comic-crud/comic-crud.component.scss
+++ b/front-end/src/app/modules/admin/pages/comic-crud/comic-crud.component.scss
@@ -11,6 +11,10 @@
   margin-top: rem(60);
 }
 
+.title-group.subtitle {
+  margin-top: rem(20);
+}
+
 .filter {
   margin-top: rem(10);
   font-size: rem(15);
@@ -21,6 +25,10 @@
   display: flex;
   align-items: center;
 
+  @include medias($tiny-mobile, $mobile) {
+    flex-direction: column;
+  }
+
   .mat-form-field-wrapper {
     padding: 0;
   }
@@ -30,38 +38,22 @@
     height: rem(29);
     margin-bottom: rem(6);
   }
-}
 
-.title-group {
-  @include flex-center;
-
-  justify-content: space-between;
-
-  ::ng-deep.mat-button-wrapper {
-    @include flex-center;
-  }
-
-  button {
-    @include flex-center;
-
-    i {
-      margin-right: rem(5);
+  .full-wrapper,
+  .full-wrapper button {
+    @include medias($tiny-mobile, $mobile) {
+      width: 100%;
     }
-  }
-
-  .title {
-    i {
-      margin-right: rem(10);
-    }
-
-    @include flex-center;
-    font-size: rem(20);
   }
 }
 
 mat-form-field,
 cms-dropdown-list {
   margin-right: rem(20);
+
+  @include medias($tiny-mobile, $mobile) {
+    width: 100%;
+  }
 }
 
 table {
@@ -80,8 +72,8 @@ table {
     display: inline-flex;
   }
 
-  .btn-edit {
-    margin-right: rem(10);
+  .btn + .btn {
+    margin-left: rem(10);
   }
 }
 .no-data {
@@ -91,7 +83,6 @@ table {
 mat-paginator {
   background-color: $color-panel-bg;
   align-self: flex-end;
-  color: $color-text;
 }
 
 .container {
