💎 style: comic mobile style.

--- a/front-end/src/app/modules/admin/components/comic-dialog/comic-dialog.component.scss
+++ b/front-end/src/app/modules/admin/components/comic-dialog/comic-dialog.component.scss
@@ -14,6 +14,10 @@ mat-dialog-actions {
 mat-form-field,
 cms-dropdown-list {
   margin-right: rem(10);
+
+  @include medias($tiny-mobile, $mobile) {
+    width: 100%;
+  }
 }
 
 .preview-image {
