--- a/front-end/src/app/modules/admin/pages/author-crud/author-crud.component.html
+++ b/front-end/src/app/modules/admin/pages/author-crud/author-crud.component.html
@@ -8,7 +8,7 @@
     [buttonText]="'Novo Autor'"
   ></cms-add-button>
 </div>
-<mat-divider fxFlex="1 0"></mat-divider>
+<mat-divider></mat-divider>
 
 <h2 class="filter">
   <i class="fas fa-filter"></i>
