--- a/front-end/src/app/modules/admin/pages/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/modules/admin/pages/comic-crud/comic-crud.component.html
@@ -8,7 +8,7 @@
     [buttonText]="'Novo Quadrinho'"
   ></cms-add-button>
 </div>
-<mat-divider fxFlex="1 0"></mat-divider>
+<mat-divider></mat-divider>
 
 <h2 class="filter">
   <i class="fas fa-filter"></i>
@@ -81,7 +81,7 @@
           <button
             (click)="loadData(form.value)"
             class="search-button"
-            mat-stroked-button
+            mat-flat-button
             color="primary"
           >
             Pesquisar
@@ -127,7 +127,7 @@
     style="display: none !important"
   >
     <ng-container matColumnDef="ComicID">
-      <th mat-header-cell *matHeaderCellDef>Quadrinho ID</th>
+      <th mat-header-cell *matHeaderCellDef>ID</th>
       <td mat-cell *matCellDef="let element">{{ element.comicID }}</td>
     </ng-container>
 
@@ -137,25 +137,37 @@
     </ng-container>
 
     <ng-container matColumnDef="Descrição">
-      <th mat-header-cell *matHeaderCellDef>Descrição</th>
-      <td class="description" mat-cell *matCellDef="let element">
+      <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Descrição</th>
+      <td
+        fxHide
+        fxShow.gt-md
+        class="description"
+        mat-cell
+        *matCellDef="let element"
+      >
         {{ element.description }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="Preço">
-      <th mat-header-cell *matHeaderCellDef>Preço</th>
-      <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+      <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Preço</th>
+      <td fxHide fxShow.gt-md mat-cell *matCellDef="let element">
+        {{ element.price }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="Ano">
-      <th mat-header-cell *matHeaderCellDef>Ano</th>
-      <td mat-cell *matCellDef="let element">{{ element.year }}</td>
+      <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Ano</th>
+      <td fxHide fxShow.gt-md mat-cell *matCellDef="let element">
+        {{ element.year }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="Páginas">
-      <th mat-header-cell *matHeaderCellDef>Páginas</th>
-      <td mat-cell *matCellDef="let element">{{ element.pages }}</td>
+      <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Páginas</th>
+      <td fxHide fxShow.gt-md mat-cell *matCellDef="let element">
+        {{ element.pages }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="Ações">
