--- a/front-end/src/app/modules/admin/pages/inventory-crud/inventory-crud.component.html
+++ b/front-end/src/app/modules/admin/pages/inventory-crud/inventory-crud.component.html
@@ -4,7 +4,7 @@
     Estoque
   </h1>
 </div>
-<mat-divider fxFlex="1 0"></mat-divider>
+<mat-divider></mat-divider>
 
 <h2 class="filter">
   <i class="fas fa-filter"></i>
