💎 style: expansion panel and trash-icon.

--- a/front-end/src/app/components/order-item/order-item.component.html
+++ b/front-end/src/app/components/order-item/order-item.component.html
@@ -9,5 +9,5 @@
   <span class="order__item__price"
     >R$ {{ item.getTotalValue() | number: "2.2" }}</span
   >
-  <i (click)="removeItem(item)" class="fa fa-trash cart__item__icon"></i>
+  <i (click)="removeItem(item)" class="fas fa-trash-alt"></i>
 </div>
