--- a/front-end/src/app/components/order-item/order-item.component.scss
+++ b/front-end/src/app/components/order-item/order-item.component.scss
@@ -43,7 +43,9 @@
       cursor: pointer;
     }
 
-    i.fa-remove {
+    i.fa-remove,
+    i.fa-trash,
+    i.fa-trash-alt {
       color: $color-danger;
     }
   }
