--- a/front-end/src/app/pages/home/home.component.scss
+++ b/front-end/src/app/pages/home/home.component.scss
@@ -24,10 +24,16 @@
   @include medias($tiny-mobile, $mobile) {
     flex-direction: column;
     margin: 0;
+    height: auto;
+    padding: rem(30 0);
   }
 
   &__title {
     font-size: rem(55);
+
+    @include medias($tiny-mobile, $mobile) {
+      font-size: rem(40);
+    }
   }
 
   &__info {
